--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.0.x",
-        "illuminate/http": "4.0.*"
+        "illuminate/support": "4.1.*",
+        "illuminate/http": "4.1.*"
     },
     "require-dev": {
 	"phpunit/phpunit": "3.7.*"
